# gmail-sorter

./: .DONE  .dockerignore  .env.example  .env.sample  .gitignore  CHANGELOG.md  CURRENT_STATUS.md  Dockerfile  PLAN.md  PRD.docx  PRD.md  README.md  agent_messages_dump_success_1777227770032.json  agent_messages_dump_success_1777231328975.json  agent_messages_dump_success_1777313824479.json  agent_messages_dump_success_1777313910240.json  agent_messages_dump_success_1777313971858.json  agent_messages_dump_success_1777314137649.json  agent_messages_dump_success_1777314182553.json  agent_messages_dump_success_1777314252847.json  agent_messages_dump_success_1777314318383.json  agent_messages_dump_success_1777314364623.json  agent_messages_dump_success_1777314434163.json  agent_messages_dump_success_1777314474981.json  agent_messages_dump_success_1777314518187.json  agent_messages_dump_success_1777314566656.json  agent_messages_dump_success_1777314621157.json  agent_messages_dump_success_1777314767710.json  agent_messages_dump_success_1777314820606.json  agent_messages_dump_success_1777314880061.json  agent_messages_dump_success_1777314931258.json  agent_messages_dump_success_1777314983835.json  agent_messages_dump_success_1777315025184.json  agent_messages_dump_success_1777315096675.json  agent_messages_dump_success_1777315156418.json  agent_messages_dump_success_1777315202711.json  agent_messages_dump_success_1777315268846.json  agent_messages_dump_success_1777315315534.json  agent_messages_dump_success_1777315357569.json  agent_messages_dump_success_1777315448651.json  (+160 more)
(+107 files in other folders)
